gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice7.C
// PR c++/52487
// { dg-do compile { target c++11 } }

struct A;         // { dg-message "forward declaration" }

void foo(A& a)
{
  [=](){a;};      // { dg-error "invalid use of incomplete type" }
}
